--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,9 @@
 [build]
   publish = "dist"
   command = "npm run build"
+  environment = { NODE_VERSION = "18" }
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[build.environment]
-  NODE_VERSION = "18"
