--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.10",
+    "dayjs": "^1.11.10",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
